goota first init

--- a/src/content/docs/Reference/frontmatter-ref.mdx
+++ b/src/content/docs/Reference/frontmatter-ref.mdx
@@ -2,7 +2,7 @@
 title: Frontmatter Reference
 ---
 
-You can customize individual Markdown and MDX pages in CelestialDocs by setting values in their frontmatter. For example, a regular page might set `title` and `description` fields.
+You can customize individual Markdown and MDX pages in GootaDocs by setting values in their frontmatter. For example, a regular page might set `title` and `description` fields.
 
 ```md
 ---
