--- a/src/content/docs/Resources/deployment.mdx
+++ b/src/content/docs/Resources/deployment.mdx
@@ -2,11 +2,11 @@
 title: Deployment
 ---
 
-Deploying your site is straightforward with CelestialDocs. This guide will help you set up deployment using GitHub Actions and configure your domain with a CNAME file. Follow the steps below to get your site live.
+Deploying your site is straightforward with GootaDocs. This guide will help you set up deployment using GitHub Actions and configure your domain with a CNAME file. Follow the steps below to get your site live.
 
 ## Deploying with GitHub Actions
 
-CelestialDocs includes a `deploy.yml` file configured for GitHub Actions to automate the deployment process. Here's how you can use it:
+GootaDocs includes a `deploy.yml` file configured for GitHub Actions to automate the deployment process. Here's how you can use it:
 
 **Steps:**
 
