--- a/src/content/docs/Guides/authoring-content-in-mdx.mdx
+++ b/src/content/docs/Guides/authoring-content-in-mdx.mdx
@@ -2,7 +2,7 @@
 title: Authoring Content in MDX
 ---
 
-CelestialDocs supports [MDX](https://mdxjs.com/) files, which extend Markdown by allowing the inclusion of React components within your content. This enables dynamic and interactive documentation. We specifically use [GitHub flavored markdown (GFM)](https://mdxjs.com/guides/gfm/). Markdown features, refer to the [Markdown documentation](/guides/authoring-content-in-md).
+GootaDocs supports [MDX](https://mdxjs.com/) files, which extend Markdown by allowing the inclusion of React components within your content. This enables dynamic and interactive documentation. We specifically use [GitHub flavored markdown (GFM)](https://mdxjs.com/guides/gfm/). Markdown features, refer to the [Markdown documentation](/guides/authoring-content-in-md).
 
 ## Using a component
 
@@ -24,7 +24,7 @@ See the [components](/guides/components) for all custom components and their ava
 
 ## Using GFM (GitHub-Flavored Markdown)
 
-MDX in CelestialDocs supports [GitHub flavored markdown (GFM)](https://mdxjs.com/guides/gfm/), which includes additional features such as tables, task lists, and strikethrough text.
+MDX in GootaDocs supports [GitHub flavored markdown (GFM)](https://mdxjs.com/guides/gfm/), which includes additional features such as tables, task lists, and strikethrough text.
 
 ### Task Lists
 
