--- a/src/content/docs/Guides/breadcrumbs.mdx
+++ b/src/content/docs/Guides/breadcrumbs.mdx
@@ -1,7 +1,7 @@
 ---
 title: Breadcrumbs
 ---
-By default, CelestialDocs sites supports breadcrumbs. It is generated after scanning the folder structure of `docs` folder.
+By default, GootaDocs sites supports breadcrumbs. It is generated after scanning the folder structure of `docs` folder.
 
 ## Hide breadcrumbs
 
