--- a/src/content/docs/Guides/pages.mdx
+++ b/src/content/docs/Guides/pages.mdx
@@ -2,13 +2,13 @@
 title: Pages
 ---
 
-CelestialDocs creates your site's HTML pages from your content, offering flexible options through Markdown frontmatter. Additionally, CelestialDocs projects have complete access to [Astro's robust page generation tools](https://docs.astro.build/en/basics/astro-pages/). This guide explains how page generation works in CelestialDocs.
+GootaDocs creates your site's HTML pages from your content, offering flexible options through Markdown frontmatter. Additionally, GootaDocs projects have complete access to [Astro's robust page generation tools](https://docs.astro.build/en/basics/astro-pages/). This guide explains how page generation works in GootaDocs.
 
 ## Content pages
 
 ### File formats
 
-CelestialDocs supports authoring content in Markdown and MDX with no configuration required. 
+GootaDocs supports authoring content in Markdown and MDX with no configuration required. 
 
 ### Add pages
 
@@ -16,7 +16,7 @@ Add new pages to your site by creating `.md` or `.mdx` files in `src/content/doc
 
 ### Type-safe frontmatter
 
-All CelestialDocs pages share a customizable set of frontmatter properties that control their appearance:
+All GootaDocs pages share a customizable set of frontmatter properties that control their appearance:
 
 ```yaml
 ---
