--- a/src/content/docs/Guides/sidebar-navigation.mdx
+++ b/src/content/docs/Guides/sidebar-navigation.mdx
@@ -1,7 +1,7 @@
 ---
 title: Sidebar Navigation
 ---
-By default, CelestialDocs sites include sidebar navigation. It is generated after parsing the folder structure of `docs` folder.
+By default, GootaDocs sites include sidebar navigation. It is generated after parsing the folder structure of `docs` folder.
 
 ## Custom order
 
