--- a/src/content/docs/Guides/site-search.mdx
+++ b/src/content/docs/Guides/site-search.mdx
@@ -3,7 +3,7 @@ title: Site Search
 ---
 import Callout from "@/components/Callout.astro";
 
-By default, CelestialDocs sites include full-text search powered by [Fuse.js](https://www.fusejs.io/), which is a fast and low-bandwidth search tool for static sites.
+By default, GootaDocs sites include full-text search powered by [Fuse.js](https://www.fusejs.io/), which is a fast and low-bandwidth search tool for static sites.
 
 No configuration is required to enable search. Build and deploy your site, then use the search bar in the site header to find content.
 
