--- a/src/content/docs/Reference/configuration-ref.mdx
+++ b/src/content/docs/Reference/configuration-ref.mdx
@@ -17,7 +17,7 @@ This document describes the available configuration options for your site. These
 
 - **Type**: `string`
 - **Description**: The name of the author or creator of the site. This value will be used to attribute content and provide credit.
-- **Example**: `"HYP3R00T"`
+- **Example**: `"goota"`
 
 ### `desc`
 
@@ -29,7 +29,7 @@ This document describes the available configuration options for your site. These
 
 - **Type**: `string`
 - **Description**: The title of your site. This will be displayed in the browser tab and used for branding purposes.
-- **Example**: `"CelestialDocs"`
+- **Example**: `"GootaDocs"`
 
 ### `ogImage`
 
@@ -41,7 +41,7 @@ This document describes the available configuration options for your site. These
 
 - **Type**: `string`
 - **Description**: The URL to the repository hosting the source code of your site. This provides a link to where the site's code can be found.
-- **Example**: `"https://github.com/HYP3R00T/CelestialDocs"`
+- **Example**: `"https://github.com/goota/GootaDocs"`
 
 ## Locale Configuration
 
@@ -173,7 +173,7 @@ You can append the following section to your existing documentation:
     ...
     {
       name: "Github",
-      href: "https://github.com/HYP3R00T/",
+      href: "https://github.com/goota/",
       linkTitle: `${SITE.title} on Github`,
       active: true,
     },
