--- a/src/content/docs/getting-started.mdx
+++ b/src/content/docs/getting-started.mdx
@@ -8,13 +8,13 @@ import Callout from "@/components/Callout.astro";
 
 ## Create a new project
 
-To create your own documentation site using CelestialDocs, follow these steps:
-- Visit the [CelestialDocs GitHub](https://github.com/HYP3R00T/CelestialDocs) repository.
+To create your own documentation site using GootaDocs, follow these steps:
+- Visit the [GootaDocs GitHub](https://github.com/goota/GootaDocs) repository.
 - Click on the "Use this template" button.
 - Follow the prompts to create a new repository using this template.
 
 <Callout variant="info">
-Try CelestialDocs in your browser: [open the template on StackBlitz](https://stackblitz.com/github/HYP3R00T/CelestialDocs)
+Try GootaDocs in your browser: [open the template on StackBlitz](https://stackblitz.com/github/goota/GootaDocs)
 </Callout>
 
 ## Local Setup
@@ -42,7 +42,7 @@ npm run dev
 Your documentation site will be available at `http://localhost:4321`.
 
 ## Customizing Your Documentation
-CelestialDocs is built to be highly customizable. You can start editing the markdown files in the content folder to create your own documentation pages.
+GootaDocs is built to be highly customizable. You can start editing the markdown files in the content folder to create your own documentation pages.
 
 To add new pages or sections, simply create new markdown files and folders inside the content directory, following the existing structure.
 
